# xml_stream_parser

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  filesystem.hpp  interval_resolver.hpp  parse.hpp  parser_concepts.hpp  pugi_xml_adapter.hpp  stream.hpp  xml_node.hpp  xml_stream_parser.hpp
test/: CMakeLists.txt  build_stream_path.test.cpp  handle_output_stream_path.test.cpp  mock_xml_file_system.hpp  parse_clobber_mode.test.cpp  parse_direction.test.cpp  parse_filename_interval.test.cpp  parse_io_type.test.cpp  parse_precision_bytes.test.cpp  parse_record_interval.test.cpp  parse_reference_time.test.cpp  test_utils.hpp  xml_stream_parser.test.cpp
